--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
   <!-- matter lib edge master version -->
+  <script type="text/javascript" src="lib/Matter/demo/js/lib/pixi.js"></script>
   <script type="text/javascript" src="lib/Matter/build/matter.min.js"></script>
 
   <!-- matter demo code -->
