--- a/www/index.html
+++ b/www/index.html
@@ -40,9 +40,7 @@
 </head>
 
 <body ng-controller="HomeCtrl as hc" class="mobile nav-links">
-  <div class="container">
-    <div id="canvas-container"></div>
-  </div>
+  <canvas id="main-canvas"></canvas>
 </body>
 
 </html>
